--- a/app/src/main/res/layout/action_details.xml
+++ b/app/src/main/res/layout/action_details.xml
@@ -54,11 +54,21 @@
                     android:textAppearance="@style/TextAppearance.AppCompat"
                     android:layout_width="wrap_content"
                     android:layout_weight="1"
-                    android:textSize="24sp"
+                    android:textSize="22sp"
                     android:padding="5dp"
                     android:fontFamily="sans-serif"
                     android:textColorHint="@color/details_title"
                     android:textColor="@color/details_title" />
+
+                <ImageButton
+                    android:layout_width="@android:dimen/app_icon_size"
+                    android:layout_height="@android:dimen/app_icon_size"
+                    android:id="@+id/start_next_button"
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true"
+                    android:elevation="4dp"
+                    app:srcCompat="@android:drawable/ic_menu_rotate"
+                    android:backgroundTint="@color/details_title"></ImageButton>
 
                 <ImageButton
                     android:layout_width="@android:dimen/app_icon_size"
@@ -106,7 +116,7 @@
                     android:id="@+id/detail_name"
                     android:layout_weight="1"
                     android:textAppearance="@style/TextAppearance.AppCompat"
-                    android:textSize="30sp"
+                    android:textSize="26sp"
                     android:gravity="right"
                     android:textColor="@android:color/black" />
             </LinearLayout>
@@ -116,66 +126,10 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="10dp"
+        app:cardElevation="5dp"
+        android:padding="5dp"
         android:layout_margin="5dp"
-        android:elevation="4dp"
-        android:layout_weight="0.9">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:elevation="4dp"
-            android:background="@color/cards_background">
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:text="@string/time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView4"
-                    android:layout_weight="1"
-                    android:textAppearance="@style/TextAppearance.AppCompat"
-                    android:padding="5dp"
-                    android:textSize="24sp"
-                    android:textColor="@color/details_title" />
-            </LinearLayout>
-            <View
-                android:layout_width="fill_parent"
-                android:background="@color/cards_lines"
-                android:layout_height="1dp" />
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="right|center_vertical">
-
-                <TextView
-                    android:text="time..."
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/detail_time"
-                    android:layout_weight="1"
-                    android:textAppearance="@style/TextAppearance.AppCompat"
-                    android:padding="5dp"
-                    android:textSize="24sp"
-                    android:gravity="right" />
-            </LinearLayout>
-
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:padding="10dp"
-        android:layout_margin="5dp"
-        android:elevation="4dp"
-        android:layout_weight="0.9">
+        android:layout_weight="1">
 
         <LinearLayout
             android:orientation="vertical"
@@ -189,105 +143,82 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:text="@string/date"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/measuring_text"
+                    android:text="Current Measuring"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView6"
                     android:layout_weight="1"
-                    android:textAppearance="@style/TextAppearance.AppCompat"
+                    android:textSize="20sp"
                     android:padding="5dp"
-                    android:textSize="24sp"
-                    android:textColor="@color/details_title" />
-            </LinearLayout>
-            <View
-                android:layout_width="fill_parent"
-                android:background="@color/cards_lines"
-                android:layout_height="1dp" />
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="right|center_vertical">
-
-                <TextView
-                    android:text="TextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/detail_date"
-                    android:layout_weight="1"
-                    android:textAppearance="@style/TextAppearance.AppCompat"
-                    android:padding="5dp"
-                    android:textSize="24sp"
-                    android:gravity="right" />
-            </LinearLayout>
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-
-    <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:elevation="4dp"
-        app:cardElevation="4dp"
-        android:layout_weight="1.3">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/cards_background">
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:text="@string/note"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView7"
-                    android:textAppearance="@style/TextAppearance.AppCompat"
-                    android:layout_weight="1"
-                    android:padding="5dp"
-                    android:textSize="24sp"
+                    android:fontFamily="sans-serif"
+                    android:textColorHint="@color/details_title"
                     android:textColor="@color/details_title" />
 
                 <ImageButton
-                    android:layout_width="@android:dimen/app_icon_size"
-                    android:layout_height="@android:dimen/app_icon_size"
-                    android:id="@+id/detail_note_button"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    app:srcCompat="@drawable/delete"
+                    android:id="@+id/delete_mes_button"
                     android:scaleType="fitCenter"
-                    android:adjustViewBounds="true"
-                    android:elevation="4dp"
-                    app:srcCompat="@drawable/edit_image"
-                    android:backgroundTint="@color/details_title" />
+                    android:adjustViewBounds="true" />
 
             </LinearLayout>
+
             <View
                 android:layout_width="fill_parent"
                 android:background="@color/cards_lines"
                 android:layout_height="1dp" />
+
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:gravity="right|center_vertical"
+                android:layout_gravity="right"
+                android:padding="5dp">
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="textMultiLine"
-                    android:text="Action's notes..."
-                    android:ems="10"
-                    android:id="@+id/detail_note"
-                    android:padding="5dp"
-                    android:textSize="18sp"
-                    android:focusable="false"></EditText>
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@android:drawable/ic_media_rew"
+                    android:id="@+id/but_previous"
+                    android:background="@android:color/transparent" />
+
+                <TextView
+                    android:text="1/3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/current_measuring"
+                    android:layout_weight="1"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
+                    android:textSize="20sp"
+                    android:gravity="center"
+                    android:textColor="@android:color/black" />
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@android:drawable/ic_media_ff"
+                    android:id="@+id/but_next"
+                    android:background="@android:color/transparent" />
+
 
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
+    <View
+        android:layout_width="fill_parent"
+        android:background="@color/cards_lines"
+        android:layout_height="1dp" />
 
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3.18"
+        android:id="@+id/cards_pager"
+        android:background="@color/main_activity_top">
+
+    </android.support.v4.view.ViewPager>
 
 </LinearLayout>
