--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,13 +102,13 @@
         android:layout_width="fill_parent"
         android:background="@android:color/darker_gray"
         android:layout_height="1dp" />
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
 
-        >
+        android:orientation="vertical">
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -122,8 +122,11 @@
 
 
         </ListView>
-
-    </RelativeLayout>
+        <View
+            android:layout_width="fill_parent"
+            android:background="@android:color/darker_gray"
+            android:layout_height="1dp" />
+    </LinearLayout>
 
 
 </LinearLayout>
