--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -31,7 +31,7 @@
             android:layout_height="1dp"
             android:background="#d7d7d7"/>
 
-        <TextView
+<!--        <TextView
             android:text="@string/language"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -43,7 +43,7 @@
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
-            android:background="#d7d7d7"/>
+            android:background="#d7d7d7"/>-->
 
         <CheckBox
             android:text="@string/show_icon"
